--- a/.github/workflows/deploy-infrastructure.yaml
+++ b/.github/workflows/deploy-infrastructure.yaml
@@ -7,6 +7,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: obscurelyme/glass@v0.0.2
+      - name: Checkout glass
+        uses: actions/checkout@v4
         with:
-          command: cfn validate --infra infrastructure/template.yaml
+          repository: obscurelyme/glass
+          token: ${{secrets.GLASS_GH_PAT}}
+          path: .github/actions/glass
+
+      - name: Run Glass CLI
+        uses: ./github/actions/glass
+        with:
+          command: validate --infra infrastructure/template.yaml
