--- a/.github/workflows/deploy-infrastructure.yaml
+++ b/.github/workflows/deploy-infrastructure.yaml
@@ -22,4 +22,4 @@ jobs:
         uses: ./.github/actions/glass
         with:
           token: ${{secrets.GLASS_GH_PAT}}
-          command: validate --infra infrastructure/template.yaml
+          command: cfn validate --infra infrastructure/template.yaml
