--- a/.github/workflows/deploy-infrastructure.yaml
+++ b/.github/workflows/deploy-infrastructure.yaml
@@ -8,18 +8,4 @@ env:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout glass
-        uses: actions/checkout@v4
-        with:
-          repository: obscurelyme/glass
-          token: ${{secrets.GLASS_GH_PAT}}
-          path: .github/actions/glass
-          ref: ${{ env.GLASS_VERSION }}
-
-      - name: Run Glass CLI
-        uses: ./.github/actions/glass
-        with:
-          token: ${{secrets.GLASS_GH_PAT}}
-          command: cfn validate --infra infrastructure/template.yaml
+    uses: ./.github/workflows/glass.yaml
