--- a/.github/workflows/glass.yaml
+++ b/.github/workflows/glass.yaml
@@ -9,7 +9,7 @@ env:
   AWS_REGION: us-east-1
 
 jobs:
-  deploy:
+  glass-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Log into AWS
